gccida/g1/cse_end_of_basic_block
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7311:6: error: use of undeclared identifier 'v23'
rtx *v23; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7330:4: error: expected ';' after expression
rtx q; // [rsp+20h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7330:5: error: use of undeclared identifier 'q'
rtx q; // [rsp+20h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7335:20: error: use of undeclared identifier 'uid_cuid_0'
v6 = *( ( _DWORD *)uid_cuid_0 + insn->fld[0].rtint); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7368:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v19 = (  struct rtx_def *)rtx[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7375:60: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( rtx_class[*( _WORD *)rtx] == 105 && ( v18 = ( __int64)rtx[2], *( _WORD *)v18 == 39) ) 
                                                           ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7382:21: error: use of undeclared identifier 'uid_cuid_0'
v22 = *( ( _DWORD *)uid_cuid_0 + rtint); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7390:14: error: expected expression
v23 = ( rtx *)( ( char *)data + 16 * v13); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7390:1: error: use of undeclared identifier 'v23'
v23 = ( rtx *)( ( char *)data + 16 * v13); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7391:6: error: use of undeclared identifier 'v23'
if ( v23[4] != rtx ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7393:20: error: use of undeclared identifier 'v23'
if ( *( ( _DWORD *)v23 + 10) != 1 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7394:13: error: expected ';' after expression
rtx = ( rtx)rtx[4]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7406:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v24 = ( __int64)rtx[2]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7411:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v25 = ( __int64)rtx[4]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7432:1: error: use of undeclared identifier 'q'
q = ( rtx)v27; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7466:1: error: use of undeclared identifier 'q'
q = ( rtx)v27; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7495:13: error: expected ';' after expression
rtx = ( rtx)rtx[4]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7503:42: error: use of undeclared identifier 'q'
if ( !skip_blocksb || !v30 || *( _WORD *)q == 36 ) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/cse.c:7505:30: error: use of undeclared identifier 'q'
if ( next == next_real_insn( q) ) 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_end_of_basic_block/src/obj/cse.o] Error 1
